--- a/index.html
+++ b/index.html
@@ -5,8 +5,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Live Stream Gallery</title>
+
+    <link rel="stylesheet" href="./includes/css/normalize.css">
+    <link rel="stylesheet" href="./includes/css/style.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&display=swap&subset=chinese-traditional" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="wrapper">
+        <div class="cover"></div>
+        <div class="container">
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="title">頻道名稱</div>
+                        <div class="name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="title">頻道名稱</div>
+                        <div class="name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="title">頻道名稱</div>
+                        <div class="name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="title">頻道名稱</div>
+                        <div class="name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="title">頻道名稱</div>
+                        <div class="name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="title">頻道名稱</div>
+                        <div class="name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="title">頻道名稱</div>
+                        <div class="name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="title">頻道名稱</div>
+                        <div class="name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="title">頻道名稱</div>
+                        <div class="name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
