--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         <img class="avatar" src="./includes/images/img_avatar.png" alt="">
                     </div>
                     <div>
-                        <div class="title">頻道名稱</div>
-                        <div class="name">實況主名字</div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
                     </div>
                 </div>
             </div>
@@ -34,8 +34,8 @@
                         <img class="avatar" src="./includes/images/img_avatar.png" alt="">
                     </div>
                     <div>
-                        <div class="title">頻道名稱</div>
-                        <div class="name">實況主名字</div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
                     </div>
                 </div>
             </div>
@@ -46,8 +46,8 @@
                         <img class="avatar" src="./includes/images/img_avatar.png" alt="">
                     </div>
                     <div>
-                        <div class="title">頻道名稱</div>
-                        <div class="name">實況主名字</div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
                     </div>
                 </div>
             </div>
@@ -58,8 +58,8 @@
                         <img class="avatar" src="./includes/images/img_avatar.png" alt="">
                     </div>
                     <div>
-                        <div class="title">頻道名稱</div>
-                        <div class="name">實況主名字</div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
                     </div>
                 </div>
             </div>
@@ -70,8 +70,8 @@
                         <img class="avatar" src="./includes/images/img_avatar.png" alt="">
                     </div>
                     <div>
-                        <div class="title">頻道名稱</div>
-                        <div class="name">實況主名字</div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
                     </div>
                 </div>
             </div>
@@ -82,8 +82,8 @@
                         <img class="avatar" src="./includes/images/img_avatar.png" alt="">
                     </div>
                     <div>
-                        <div class="title">頻道名稱</div>
-                        <div class="name">實況主名字</div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
                     </div>
                 </div>
             </div>
@@ -94,8 +94,8 @@
                         <img class="avatar" src="./includes/images/img_avatar.png" alt="">
                     </div>
                     <div>
-                        <div class="title">頻道名稱</div>
-                        <div class="name">實況主名字</div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
                     </div>
                 </div>
             </div>
@@ -106,8 +106,8 @@
                         <img class="avatar" src="./includes/images/img_avatar.png" alt="">
                     </div>
                     <div>
-                        <div class="title">頻道名稱</div>
-                        <div class="name">實況主名字</div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
                     </div>
                 </div>
             </div>
@@ -118,8 +118,8 @@
                         <img class="avatar" src="./includes/images/img_avatar.png" alt="">
                     </div>
                     <div>
-                        <div class="title">頻道名稱</div>
-                        <div class="name">實況主名字</div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
                     </div>
                 </div>
             </div>
