--- a/index.html
+++ b/index.html
@@ -123,6 +123,32 @@
                     </div>
                 </div>
             </div>
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <div class="channel-info">
+                    <div>
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                    </div>
+                    <div>
+                        <div class="text title">頻道名稱</div>
+                        <div class="text name">實況主名字</div>
+                    </div>
+                </div>
+            </div>
+            <div class="item"></div>
+            <div class="item"></div>
         </div>
     </div>
 </body>
