--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Live Stream Gallery</title>
 
-    <link rel="stylesheet" href="/dist/style/style.min.css">
+    <link rel="stylesheet" href="./dist/style/style.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&display=swap&subset=chinese-traditional" rel="stylesheet">
 </head>
