--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Live Stream Gallery</title>
 
-    <link rel="stylesheet" href="./dist/style/style.min.css">
+    <link rel="stylesheet" href="./dist/style/style.min.css" />
 
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&display=swap&subset=chinese-traditional" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&display=swap&subset=chinese-traditional"
+        rel="stylesheet" />
 </head>
+
 <body>
     <div class="wrapper">
         <div class="cover"></div>
         <div class="container">
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -27,10 +31,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -39,10 +43,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -51,10 +55,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -63,10 +67,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -75,10 +79,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -87,10 +91,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -99,10 +103,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -111,10 +115,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -123,10 +127,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -135,10 +139,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="">
+                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
                 <div class="channel-info">
                     <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="">
+                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
                     </div>
                     <div>
                         <div class="text title">頻道名稱</div>
@@ -151,4 +155,5 @@
         </div>
     </div>
 </body>
+
 </html>
