--- a/index.html
+++ b/index.html
@@ -12,148 +12,91 @@
     <link
         href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&display=swap&subset=chinese-traditional"
         rel="stylesheet" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
         <div class="cover"></div>
-        <div class="container">
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="channel-preview" src="./includes/images/preview-320x180.jpg" alt="" />
-                <div class="channel-info">
-                    <div>
-                        <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
-                    </div>
-                    <div>
-                        <div class="text title">頻道名稱</div>
-                        <div class="text name">實況主名字</div>
-                    </div>
-                </div>
-            </div>
-            <div class="item"></div>
-            <div class="item"></div>
-        </div>
+        <div class="container"></div>
     </div>
 </body>
+
+<div class="template" style="display: none;">
+    <div class="item">
+        <img class="channel-preview" src="" alt="" />
+        <div class="channel-info">
+            <div>
+                <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
+            </div>
+            <div>
+                <div class="text title"></div>
+                <div class="text name"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    var clientID = "4ubi9q0wftd8f143kow3puugggwon0";
+    var num = 20;
+    var gameName = "League of Legends";
+    var gameID = "";
+    var data = [];
+
+    if (gameName) {
+        $.ajax({
+            url: "https://api.twitch.tv/helix/games",
+            data: { 
+                "name": gameName
+            },
+            headers: {
+                "Client-ID": clientID
+            },
+            success: function (response) {
+                gameID = response.data[0] ? response.data[0].id : "";
+                getStreams(gameID);
+            }
+        });
+    } else {
+        getStreams();
+    }
+
+    function getStreams(gameID) {
+        var data = {
+            "first": num
+        }
+
+        if(gameID) {
+            data["game_id"] = gameID;
+        }
+
+        $.ajax({
+            url: "https://api.twitch.tv/helix/streams",
+            data: data,
+            headers: {
+                "Client-ID": clientID
+            },
+            success: function (result) {
+                renderItems(result.data);
+            },
+            error: function (error) {
+                console.log(error);
+            }
+        });
+    }
+
+    function renderItems(data) {
+        data.forEach(element => {
+            var item = $(".template").children().clone();
+            $(item).find(".channel-preview").attr("src", element.thumbnail_url.replace("{width}", 320).replace("{height}", 180));
+            $(item).find(".channel-info .title").html(element.title);
+            $(item).find(".channel-info .name").html(element.user_name);
+            
+            $(".container").append(item);
+        });
+    }
+</script>
 
 </html>
