--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
             
             $(".container").append(item);
         });
+
+        for (let i = 0; i < (data.length % 3); i++) {
+            $(".container").append("<div class='item' style='visibility: hidden;'></div>");
+        }
     }
 </script>
 
