infinite scroll： - 透過第一次回傳資料中的 pagination 屬性，用來提供後續資料抓取的參數。 - 新增監聽 scroll 事件，並判斷視窗是否捲動至底部，若是，則呼叫 getStreams() 抓取後需資料。 - 修改 getStreams() 接收的參數，統一由外部呼叫決定帶入的物件參數。

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     var gameName = "League of Legends";
     var gameID = "";
     var data = [];
+    var pagination = "";
 
     if (gameName) {
         $.ajax({
@@ -56,22 +57,32 @@
             },
             success: function (response) {
                 gameID = response.data[0] ? response.data[0].id : "";
-                getStreams(gameID);
+                getStreams({
+                    "game_id": gameID,
+                    "first": num
+                });
             }
         });
     } else {
-        getStreams();
+        getStreams({
+            "first": num
+        });
     }
 
-    function getStreams(gameID) {
-        var data = {
-            "first": num
-        }
+    $(document).ready(function () {
+        $(window).scroll(function() {
+            if($(window).scrollTop() + $(window).height() == $(document).height()) {
+                if (pagination) {
+                    getStreams({
+                        "after": pagination
+                    });
+                }
+            }
+        });
+    });
 
-        if(gameID) {
-            data["game_id"] = gameID;
-        }
 
+    function getStreams(data) {
         $.ajax({
             url: "https://api.twitch.tv/helix/streams",
             data: data,
@@ -79,6 +90,7 @@
                 "Client-ID": clientID
             },
             success: function (result) {
+                pagination = result.pagination;
                 getUserDataByUserIds(result.data);
             },
             error: function (error) {
@@ -118,6 +130,8 @@
     }
 
     function renderItems(data) {
+        $(".item.fake").remove();
+
         data.forEach(element => {
             var item = $(".template").children().clone();
             $(item).find(".channel-preview").attr("src", element.thumbnail_url.replace("{width}", 320).replace("{height}", 180));
@@ -129,7 +143,7 @@
         });
 
         for (let i = 0; i < (data.length % 3); i++) {
-            $(".container").append("<div class='item' style='visibility: hidden;'></div>");
+            $(".container").append("<div class='item fake' style='visibility: hidden;'></div>");
         }
     }
 </script>
