infinite scroll： 調整抓取後續資料時，帶的參數：指定至 pagination.cursor。

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             if($(window).scrollTop() + $(window).height() == $(document).height()) {
                 if (pagination) {
                     getStreams({
-                        "after": pagination
+                        "after": pagination.cursor
                     });
                 }
             }
