圖片 Placeholder： - 使用圖片載入事件 onload，圖片下載完成後將背景設定為 none。

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img class="channel-preview" src="" alt="" />
         <div class="channel-info">
             <div>
-                <img class="avatar" src="./includes/images/img_avatar.png" alt="" />
+                <img class="avatar" src="" alt="" onload="this.style.backgroundImage='none'"/>
             </div>
             <div>
                 <div class="text title"></div>
