--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     var gameID = "";
     var data = [];
     var pagination = "";
+    var isLoading = true;
 
     if (gameName) {
         $.ajax({
@@ -71,8 +72,9 @@
 
     $(document).ready(function () {
         $(window).scroll(function() {
-            if($(window).scrollTop() + $(window).height() == $(document).height()) {
-                if (pagination) {
+            if($(window).scrollTop() + $(window).height() >= ($(document).height() - 200)) {
+                if (pagination && (!isLoading)) {
+                    isLoading = true;
                     getStreams({
                         "after": pagination.cursor
                     });
@@ -92,6 +94,7 @@
             success: function (result) {
                 pagination = result.pagination;
                 getUserDataByUserIds(result.data);
+                isLoading = false;
             },
             error: function (error) {
                 console.log(error);
