[vanilla js] - 將 class：template 改為 id：__template__，只供 js 使用。 - 將 jQuery 操作 DOM 元素的部分改寫為原生 JavaScript。#

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 </body>
 
-<div class="template" style="display: none;">
+<div id="__template__" style="display: none;">
     <div class="item">
         <img class="channel-preview" src="" alt="" />
         <div class="channel-info">
