--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
         href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&display=swap&subset=chinese-traditional"
         rel="stylesheet" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <script src="./src/script/lang-en.js"></script>
+    <script src="./src/script/lang-zh-tw.js"></script>
     <script src="./src/script/main.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
         <div class="cover"></div>
+        <header>
+            <h1 class="title" data-i18n="TITLE">The Streams in English</h1>
+            <ul class="lang-switch">
+                <li data-lang="en">English</li>
+                <li data-lang="zh">中文</li>
+            </ul>
+        </header>
+
         <div class="container"></div>
     </div>
 </body>
